tests/cases/syntax/error/types/not-an-int.soccam
;; This should *eventually* be an error. 
;; But we're not doing type checking yet...
(module not-an-int soccam
  (decl ([x not-an-int])
    (:= x 1)))
